--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+      <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400i|Source+Sans+Pro:300,400,600,700"
+            rel="stylesheet">
+
+      <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700" rel="stylesheet">
+
+      <link rel="stylesheet" href="/src/assets/plugins/bootstrap/bootstrap.min.css">
+      <script src="/src/assets/plugins/jquery-2.1.1.min.js"></script>
+      <script src="/src/assets/plugins/bootstrap/bootstrap.min.js"></script>
   </head>
+  <style></style>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
